--- a/item.html
+++ b/item.html
@@ -55,18 +55,18 @@
             <table class="highlight responsive yellow lighten-3">
 
                 <tr>
-                    <th>item</th>
-                    <td>yes</td>
+                    <th>Item Name</th>
+                    <td>name</td>
                 </tr>
 
                 <tr>
-                    <th>i</th>
-                    <td>dont know</td>
+                    <th>Category 2</th>
+                    <td>something</td>
                 </tr>
 
                 <tr>
-                    <th>what</th>
-                    <td>to make this table</td>
+                    <th>Details</th>
+                    <td>something</td>
                 </tr>
 
             </table>
