--- a/stuff.html
+++ b/stuff.html
@@ -37,7 +37,7 @@
 
     <h1 class="purple-text text-darken-3"
       style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
-      Here's the table</h1>
+      Table</h1>
 
     <a href="index.html" class="waves-effect cyan darken-1 waves-light btn">
       Go Back
@@ -111,18 +111,18 @@
 
         <thead>
           <tr>
-            <th>Stuff</th>
-            <th>category 2</th>
-            <th>detail</th>
+            <th>Category 1</th>
+            <th>Category 2</th>
+            <th>Detail</th>
           </tr>
         </thead>
 
         <tbody>
 
           <tr>
-            <td>thing</td>
-            <td>idk</td>
-            <td>this line is longer ahs;dlkfhasd;lkfjs</td>
+            <td>something</td>
+            <td>something</td>
+            <td>something</td>
             <td class="right">
               <a href="item.html" class="waves-effect cyan darken-1 waves-light btn">
                 <i class="material-icons right">edit</i>Info/Edit</a>
@@ -133,8 +133,8 @@
 
           <tr>
             <td>yes</td>
-            <td>no</td>
-            <td>maybe</td>
+            <td>yes</td>
+            <td>yes</td>
             <td class="right">
               <a href="item.html" class="waves-effect cyan darken-1 waves-light btn">
                 <i class="material-icons">edit</i></a>
@@ -144,9 +144,9 @@
           </tr>
 
           <tr>
-            <td>correct</td>
-            <td>wrong</td>
-            <td>democratic</td>
+            <td>no</td>
+            <td>no</td>
+            <td>no</td>
             <td class="right">
               <a href="item.html" class="waves-effect cyan darken-1 waves-light btn">
                 <i class="material-icons">edit</i></a>
