--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <h1 class="purple-text text-darken-3"
             style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
-            Inventory! List of Stuff!</h1>
+            Things to Watch!</h1>
 
         <a href="stuff.html" class="waves-effect cyan darken-1 waves-light btn">
             Go to List!
@@ -37,7 +37,7 @@
         <div class="section"></div>
 
         <div class="section center">
-            <img src="images/house.webp" alt="House" style="max-width:80%">
+            <img src="images/view.jpg" alt="House" style="max-width:90%">
         </div>
 
     </div>
