--- a/stuff.html
+++ b/stuff.html
@@ -114,7 +114,8 @@
 
       <!-- Dropdown Structure -->
       <ul id='dropdown1' class='dropdown-content'>
-        <li><a href="#!">Name</a></li>
+        <li><a href="#!">Type</a></li>
+        <li><a href="#!">Title</a></li>
         <li><a href="#!">Status</a></li>
         <li><a href="#!">Rating</a></li>
       </ul>
