--- a/stuff.html
+++ b/stuff.html
@@ -35,7 +35,7 @@
 
     <h1 class="purple-text text-darken-3"
       style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
-      To Watch List!</h1>
+      Watch List!</h1>
 
     <a href="index.html" class="waves-effect cyan darken-1 waves-light btn">
       Go Back
@@ -64,37 +64,47 @@
               style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
               Add:</h1>
 
-              <div class="row">
+            <div class="row">
 
-                <div class="input-field col s8">
-                    <i class="material-icons prefix purple-text text-darken-3">star</i>
-                    <label for="item_name">Title</label>
-                    <input id="item_name" type="text" required>
-                </div>
-
-                <div class="input-field col s4">
-                    <i class="material-icons prefix purple-text text-darken-3">star</i>
-                    <label for="status">Status</label>
-                    <input id="status" type="text" value="To Watch" required>
-                </div>
+              <div class="input-field col s12">
+                <i class="material-icons prefix purple-text text-darken-3">star</i>
+                <label for="item_name">Title</label>
+                <input id="item_name" type="text" required>
+              </div>
 
             </div> <!-- end row 1 -->
 
             <div class="row">
 
-                <div class="input-field col s8">
-                    <i class="material-icons prefix purple-text text-darken-3">star_border</i>
-                    <textarea id="textarea" class="materialize-textarea"></textarea>
-                    <label for="description">Extra Details</label>
-                </div>
+              <div class="input-field col s4">
+                <i class="material-icons prefix purple-text text-darken-3">star</i>
+                <label for="item_name">Type</label>
+                <input id="item_name" type="text" required>
+              </div>
 
-                <div class="input-field col s4">
-                    <i class="material-icons prefix purple-text text-darken-3">star_border</i>
-                    <label for="rating">Rating</label>
-                    <input id="rating" type="number">
-                </div>
+              <div class="input-field col s4">
+                <i class="material-icons prefix purple-text text-darken-3">star</i>
+                <label for="status">Status</label>
+                <input id="status" type="text" value="To Watch" required>
+              </div>
+
+              <div class="input-field col s4">
+                <i class="material-icons prefix purple-text text-darken-3">star_border</i>
+                <label for="rating">Rating</label>
+                <input id="rating" type="number">
+              </div>
 
             </div> <!-- end row 2 -->
+
+            <div class="row">
+
+              <div class="input-field col s12">
+                <i class="material-icons prefix purple-text text-darken-3">star_border</i>
+                <textarea id="textarea" class="materialize-textarea"></textarea>
+                <label for="description">Extra Details</label>
+              </div>
+
+            </div> <!-- end row 3 -->
 
           </div> <!-- end modal content -->
 
